Continuous deployment: Init kubernetes manifest

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -37,7 +37,17 @@
     "embeddableLaunchScript": false,
     "entitySuffix": "",
     "otherModules": [],
-    "blueprints": []
+    "blueprints": [],
+    "appsFolders": ["jhipsterbank"],
+    "directoryPath": "../",
+    "dockerRepositoryName": "citizendiop",
+    "dockerPushCommand": "docker push",
+    "kubernetesNamespace": "default",
+    "kubernetesServiceType": "LoadBalancer",
+    "kubernetesUseDynamicStorage": false,
+    "ingressDomain": "",
+    "monitoring": "no",
+    "istio": false
   },
   "entities": ["BankAccount", "Operation", "Label"]
 }
